# autoD

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  =4.20.0  AGENTS.md  CHANGELOG.md  CLAUDE.md  COVERAGE_BASELINE.md  COVERAGE_FINAL.md  Dockerfile  GETTING_STARTED.md  INTEGRATION_REPORT.md  PHASE5_COMPLETION.md  PHASES_3_4_SUMMARY.md  PHASE_10_HANDOFF.json  PHASE_10_SUMMARY.md  PHASE_6_7_8_HANDOFF.json  PHASE_9_FINAL_REPORT.txt  PHASE_9_HANDOFF.json  PHASE_9_SUMMARY.md  PROJECT_MANAGER_GUIDE.md  README.md  STARTUP.md  TESTING_RECOMMENDATIONS.md  WEEK_1_COMPLETE.md  WEEK_2_PLAN.md  WORKSTREAM_1_COMPLETE.md  WORKSTREAM_SUMMARY.md  alembic.ini  com.paperautopilot.daemon.plist  coverage.json  docker-compose.yml  paper-autopilot.service  phase_3_4_handoff_report.json  process_inbox.py  progress.md  pyproject.toml  requirements-dev.txt  requirements-test.txt  (+3 more)
.claude/agents/: project-orchestrator.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: README.md  ci.yml  integration-pr.yml  nightly.yml  pre-commit.yml  release.yml
alembic/: env.py
alembic/versions/: 68503a3a3e10_initial_schema_with_document_model.py  e00ce3553a95_initial_simplified_schema_10_fields_no_.py
config/: __init__.py  grafana_dashboard.json  message_overhead.yaml  model_encodings.yaml  models.py  pricing.yaml  prometheus.yml
docs/: API_DOCS.md  CHANGELOG.md  CHANGES_FROM_ORIGINAL_PLAN.md  CODE_ARCHITECTURE.md  CONTRIBUTING.md  DAEMON_MODE.md  DEFERRED_WORK.md  DELEGATION_STRATEGY.md  DEPLOYMENT_VALIDATION.md  DEVELOPMENT_MODEL.md  ERROR_HANDLING.md  IMPLEMENTATION_CHANGES.md  IMPLEMENTATION_ROADMAP.md  PARALLEL_EXECUTION_STRATEGY.md  PARALLEL_EXECUTION_WEEK2_GUIDE.md  PARALLEL_EXECUTION_WEEK2_PLAN.md  PHASES_6_7_8_SUMMARY.md  PROCESSOR_GUIDE.md  PROJECT_HANDOFF.md  QUICK_REFERENCE.md  RUNBOOK.md  TECHNICAL_DEBT_ANALYSIS.md  TESTING_GUIDE.md  TROUBLESHOOTING.md  VECTOR_STORE.md  WEEK_3_PLAN.md  architecture.md  file_inputs_for_the_responses_api.md  files.csv  gpt_5_prompt_engineering.md  how_to_count_tokens_w_tik_tok_token.md  initial_implementation_plan.md  integration_test_report_wave2.md  model_policy.md  overview.md  phase1_config_documentation.md  phase1_handoff.json  phase2_database_layer.md  phase2_handoff.json  phase2_quick_reference.md  (+5 more)
docs/adr/: 0001-iterative-phasing-over-parallel-development.md  0002-standardized-error-handling-with-compensating-transactions.md  ADR-023-technical-debt-reduction-investment.md  ADR-024-workstream-deferral-td3-ws2.md  ADR-030-vector-store-integration.md
docs/decisions/: ADR-TEMPLATE.md  README.md
docs/guides/: vector_store_usage.md
docs/orientation/: FILE_INVENTORY.md  ORIENTATION-2025-10-16.md  QUICK_START.md
examples/: config_usage.py  token_cost_demo.py  token_counting_integration.py
scripts/: check_model_policy.py  validate_phase2.sh  verify_phase_9.py
src/: README_CONFIG.md  __init__.py  api_client.py  cache.py  cleanup_handlers.py  config.py  cost_calculator.py  daemon.py  database.py  dedupe.py  embedding_cache.py  embeddings.py  health_endpoints.py  logging_config.py  metrics.py  models.py  monitoring.py  pipeline.py  processor.py  prompts.py  retry_logic.py  schema.py  search.py  token_counter.py  transactions.py  vector_store.py
tests/: README.md  __init__.py  conftest.py  test_dedupe_stage.py  test_deployment_validation.py  test_infrastructure.py  test_model_policy.py  test_pipeline.py  test_sha256_stage.py  utils.py
token_counter/: __init__.py  chat_api.py  cost.py  counter.py  encoding.py  exceptions.py  file_estimators.py  models.py  primitives.py  responses_api.py  validator.py
(+66 files in other folders)
